tests/NormalTests/paczka1/fuzzy1/51257931.err
Error in line 4: 4GfMvyH9 S926 61,53
Error in line 2: bxBC0I A918 70,0
Error in line 18: rwSK A448 -1,2
Error in line 10: 4GfMvyH9 S926 2639,0
Error in line 16: A918 S926 15,7
Error in line 17: rwSK A448 15,1
Error in line 25: QA5n A918 346,5
Error in line 29: OtriOg A918 26,0
Error in line 28: rwSK A918 72,1
